--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
                     <div class="row">
                         <div class="col-xl-6 col-lg-6 col-md-8 col-sm-10">
                             <div class="hero__caption">
-                                <h1 style="color: #009ce9">Nossa ajuda para com<br> o mundo.</h1>
-                                <p style="color: #009ce9">A purificação das águas é a purificação do mundo.</p>
+                                <h1 style="color: white">Nossa ajuda para com<br> o mundo.</h1>
+                                <p style="color: white">A purificação das águas é a purificação do mundo.</p>
                                 <div class="hero__btn">
                                     <a href="industries.html" class="btn hero-btn mb-10">Doe</a>
                                     <a href="industries.html" class="cal-btn ml-15">
