Adição de textos relacionados ao tema e tradução de textos que estavam em inglês

--- a/about.html
+++ b/about.html
@@ -203,13 +203,13 @@
                     <div class="about-caption mb-50">
                         <!-- Section Tittle -->
                         <div class="section-tittle mb-35">
-                            <span>Sobre nossa fundação</span>
-                            <h2>Estamos em uma missão para advertir o mundo sobre a situação cada vez mais precária da água doce.</h2>
+                            <span>Sobre nosso site</span>
+                            <h2>Projeto desenvolvido por alunos do Instituto Federal do Ceará, este site tem como tema central a água e busca conscientizar a sociedade sobre a importância do seu uso sustentável.</h2>
                         </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,mod tempor incididunt ut labore et dolore magna aliqua. Utnixm, quis nostrud exercitation ullamc.</p>
-                        <p>Lorem ipvsum dolor sit amext, consectetur adipisicing elit, smod tempor incididunt ut labore et dolore.</p>
+                        <p> A água é um recurso natural, vital e fundamental, composta por H2O, essencial para a vida, sendo incolor insípida e inodora.</p>
+                        <p> O planeta possui vastos recursos hídricos, mas apenas uma pequena fração é água doce acessível, tornando a conservação e o uso consciente cruciais para a sustentabilidadee e a saúde do planeta, que inclui o combate ao desperdício e a poluição.</p>
                     </div>
-                    <a href="about.html" class="btn">About US</a>
+                    <a href="about.html" class="btn">Sobre nós</a>
                 </div>
                 <div class="col-lg-6 col-md-12">
                     <!-- about-img -->
@@ -233,11 +233,11 @@
                 <div class="row align-items-center justify-content-between">
                     <div class="col-xl-5 col-lg-9 col-md-8">
                         <div class="wantToWork-caption wantToWork-caption2">
-                            <h2>Lets Chenge The World With Humanity</h2>
+                            <h2>Vamos mudar o mundo com humanidade</h2>
                         </div>
                     </div>
                     <div class="col-xl-2 col-lg-3 col-md-4">
-                        <a href="#" class="btn white-btn f-right sm-left">Become A Volunteer</a>
+                        <a href="#" class="btn white-btn f-right sm-left">Torne-se um voluntário</a>
                     </div>
                 </div>
             </div>
