--- a/blog.html
+++ b/blog.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title> Charity | Teamplate</title>
-    <meta name="description" content="">
+    <title> Preservação da Água Potável</title>
+    <meta name="Como a água pode ser preservada" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
 
@@ -158,10 +158,11 @@
                                 </div>
                                 <div class="blog_details">
                                     <a class="d-inline-block" href="blog_details.html">
-                                        <h2 class="blog-head" style="color: #2d2d2d;">Google inks pact for new 35-storey office</h2>
+                                        <h2 class="blog-head" style="color: #2d2d2d;">Água e a sua importancia</h2>
                                     </a>
-                                    <p>That dominion stars lights dominion divide years for fourth have don't stars is that
-                                        he earth it first without heaven in place seed it second morning saying.</p>
+                                    <p>A água é um recurso essencial para diversos setores da sociedade brasileira, sendo utilizada principalmente para a irrigação de lavouras,
+                                        o abastecimento humano (urbano e rural), as atividades industriais, 
+                                        a geração de energia elétrica, a extração mineral, a aquicultura, a navegação, o turismo e o lazer.</p>
                                     <ul class="blog-info-link">
                                         <li><a href="#"><i class="fa fa-user"></i> Travel, Lifestyle</a></li>
                                         <li><a href="#"><i class="fa fa-comments"></i> 03 Comments</a></li>
@@ -178,10 +179,11 @@
                                 </div>
                                 <div class="blog_details">
                                     <a class="d-inline-block" href="blog_details.html">
-                                        <h2 class="blog-head" style="color: #2d2d2d;">Google inks pact for new 35-storey office</h2>
+                                        <h2 class="blog-head" style="color: #2d2d2d;"> </h2>
                                     </a>
-                                    <p>That dominion stars lights dominion divide years for fourth have don't stars is that
-                                        he earth it first without heaven in place seed it second morning saying.</p>
+                                    <p> água é um recurso natural essencial para a manutenção da natureza, responsável por manter a umidade do ar, abastecer 
+                                        lençóis freáticos e conservar a vida de plantas por todo o mundo, 
+                                        também desempenha importante função na atividade da agricultura, nas indústrias, na geração de energia elétrica e outros fatores.</p>
                                     <ul class="blog-info-link">
                                         <li><a href="#"><i class="fa fa-user"></i> Travel, Lifestyle</a></li>
                                         <li><a href="#"><i class="fa fa-comments"></i> 03 Comments</a></li>
@@ -198,10 +200,11 @@
                                 </div>
                                 <div class="blog_details">
                                     <a class="d-inline-block" href="blog_details.html">
-                                        <h2 class="blog-head" style="color: #2d2d2d;">Google inks pact for new 35-storey office</h2>
+                                        <h2 class="blog-head" style="color: #2d2d2d;"> Preservação da Água </h2>
                                     </a>
-                                    <p>That dominion stars lights dominion divide years for fourth have don't stars is that
-                                        he earth it first without heaven in place seed it second morning saying.</p>
+                                    <p> A preservação da água depende muito do posicionamento da população em relação ao assunto, bem como do apoio da gestão pública e
+                                        da iniciativa privada. Sem a união de esforços em movimentos coletivos e colaborativos, há o risco de ficarmos sem esse recurso natural
+                                        tão importante em um futuro não tão distante. </p>
                                     <ul class="blog-info-link">
                                         <li><a href="#"><i class="fa fa-user"></i> Travel, Lifestyle</a></li>
                                         <li><a href="#"><i class="fa fa-comments"></i> 03 Comments</a></li>
