--- a/blog.html
+++ b/blog.html
@@ -221,10 +221,11 @@
                                 </div>
                                 <div class="blog_details">
                                     <a class="d-inline-block" href="blog_details.html">
-                                        <h2 class="blog-head" style="color: #2d2d2d;">Google inks pact for new 35-storey office</h2>
+                                        <h2 class="blog-head" style="color: #2d2d2d;">Se essa água não for Preservada</h2>
                                     </a>
-                                    <p>That dominion stars lights dominion divide years for fourth have don't stars is that
-                                        he earth it first without heaven in place seed it second morning saying.</p>
+                                    <p>A água que tanto bebemos e utilizamos, se não for preservada, causará impactos no nosso 
+                                        ammbiente de forma severa, afetando a flora e a fauna, fome, doenças, escassez e redução de lençóis freáticos, a contaminação da água, e 
+                                        aumentam conflitos pelo seu acesso, além de prejudicar a saúde humana com o consumo de água contaminada, transmitindo doenças. </p>
                                     <ul class="blog-info-link">
                                         <li><a href="#"><i class="fa fa-user"></i> Travel, Lifestyle</a></li>
                                         <li><a href="#"><i class="fa fa-comments"></i> 03 Comments</a></li>
