--- a/blog.html
+++ b/blog.html
@@ -160,7 +160,7 @@
                                     <a class="d-inline-block" href="blog_details.html">
                                         <h2 class="blog-head" style="color: #2d2d2d;">Água e a sua importancia</h2>
                                     </a>
-                                    <p>A água é um recurso essencial para diversos setores da sociedade brasileira, sendo utilizada principalmente para a irrigação de lavouras,
+                                    <p>A Água é um recurso essencial para diversos setores da sociedade brasileira e do mundo inteiro, sendo utilizada principalmente para a irrigação de lavouras,
                                         o abastecimento humano (urbano e rural), as atividades industriais, 
                                         a geração de energia elétrica, a extração mineral, a aquicultura, a navegação, o turismo e o lazer.</p>
                                     <ul class="blog-info-link">
@@ -179,7 +179,7 @@
                                 </div>
                                 <div class="blog_details">
                                     <a class="d-inline-block" href="blog_details.html">
-                                        <h2 class="blog-head" style="color: #2d2d2d;"> </h2>
+                                        <h2 class="blog-head" style="color: #2d2d2d;">Água e sua responsabilidade em outros Setores</h2>
                                     </a>
                                     <p> água é um recurso natural essencial para a manutenção da natureza, responsável por manter a umidade do ar, abastecer 
                                         lençóis freáticos e conservar a vida de plantas por todo o mundo, 
@@ -202,9 +202,9 @@
                                     <a class="d-inline-block" href="blog_details.html">
                                         <h2 class="blog-head" style="color: #2d2d2d;"> Preservação da Água </h2>
                                     </a>
-                                    <p> A preservação da água depende muito do posicionamento da população em relação ao assunto, bem como do apoio da gestão pública e
-                                        da iniciativa privada. Sem a união de esforços em movimentos coletivos e colaborativos, há o risco de ficarmos sem esse recurso natural
-                                        tão importante em um futuro não tão distante. </p>
+                                    <p> A água que tanto bebemos e utilizamos, se não for preservada, causará impactos no nosso 
+                                        ammbiente de forma severa, afetando a flora e a fauna, fome, doenças, escassez e redução de lençóis freáticos, a contaminação da água, e 
+                                        aumentam conflitos pelo seu acesso, além de prejudicar a saúde humana com o consumo de água, contaminando e transmitindo graves doenças para aquela população.</p>
                                     <ul class="blog-info-link">
                                         <li><a href="#"><i class="fa fa-user"></i> Travel, Lifestyle</a></li>
                                         <li><a href="#"><i class="fa fa-comments"></i> 03 Comments</a></li>
@@ -221,11 +221,10 @@
                                 </div>
                                 <div class="blog_details">
                                     <a class="d-inline-block" href="blog_details.html">
-                                        <h2 class="blog-head" style="color: #2d2d2d;">Se essa água não for Preservada</h2>
+                                        <h2 class="blog-head" style="color: #2d2d2d;">Água e suas fontes de Poluição</h2>
                                     </a>
-                                    <p>A água que tanto bebemos e utilizamos, se não for preservada, causará impactos no nosso 
-                                        ammbiente de forma severa, afetando a flora e a fauna, fome, doenças, escassez e redução de lençóis freáticos, a contaminação da água, e 
-                                        aumentam conflitos pelo seu acesso, além de prejudicar a saúde humana com o consumo de água contaminada, transmitindo doenças. </p>
+                                    <p>As fontes de poluição da água incluem esgotos domésticos e industriais sem tratamento, atividades agrícolas que utilizam agrotóxicos e fertilizantes, 
+                                        o descarte inadequado de lixo e resíduos sólidos, acidentes e derramamento de petróleo, e mineração com seus rejeitos tóxicos, trazendo um grande risco de doenças. </p>
                                     <ul class="blog-info-link">
                                         <li><a href="#"><i class="fa fa-user"></i> Travel, Lifestyle</a></li>
                                         <li><a href="#"><i class="fa fa-comments"></i> 03 Comments</a></li>
@@ -242,10 +241,21 @@
                                 </div>
                                 <div class="blog_details">
                                     <a class="d-inline-block" href="blog_details.html">
-                                        <h2 class="blog-head" style="color: #2d2d2d;">Google inks pact for new 35-storey office</h2>
+                                        <h2 class="blog-head" style="color: #2d2d2d;">Como podemos preserva-lá</h2>
                                     </a>
-                                    <p>That dominion stars lights dominion divide years for fourth have don't stars is that
-                                        he earth it first without heaven in place seed it second morning saying.</p>
+                                    <p> Sendo a Água um recurso tão importante para nossa humanidade e presente em nosso cotidiano e em várias tarefas, 
+                                        deve ser constantemente usada de forma consciente. Aqui estão as formas de como podemos preserva-lá:
+                                    
+                                        1- Reduzir o tempo de banho.
+                                        2- Desligar a torneira ao escovar os dentes ou quando lavar a louça.
+                                        3- Usar a  máquina de lavar roupas sempre com a capacidade máxima. 
+                                        4- Verificar e corrigir vazamentos e goteiras, que representam um desperdício.
+                                        5- Verifique e corrija vazamentos e goteiras, que representam um desperdício. 
+                                        6- Use a água da máquina de lavar para limpar pisos, e a água da chuva para regar plantas e lavar áreas externas. 
+                                        7-  Não jogue lixo, plástico ou óleo em rios e outros corpos d'água.
+                                    
+                                        Seguir esses passos e conscientizar outras pessoas sobre, pode ajudar na conscientização sobre o Desperdício da 
+                                        Água e como preservar o nosso meio-ambiente.</p>
                                     <ul class="blog-info-link">
                                         <li><a href="#"><i class="fa fa-user"></i> Travel, Lifestyle</a></li>
                                         <li><a href="#"><i class="fa fa-comments"></i> 03 Comments</a></li>
