--- a/about.html
+++ b/about.html
@@ -204,7 +204,7 @@
                         <!-- Section Tittle -->
                         <div class="section-tittle mb-35">
                             <span>Sobre nosso site</span>
-                            <h2>Projeto desenvolvido por alunos do Instituto Federal do Ceará, este site tem como tema central a água e busca conscientizar a sociedade sobre a importância do seu uso sustentável.</h2>
+                            <h2>Projeto desenvolvido por alunos do Instituto Federal do Ceará. este site tem como tema central a água e busca conscientizar a sociedade sobre a importância do seu uso sustentável.</h2>
                         </div>
                         <p> A água é um recurso natural, vital e fundamental, composta por H2O, essencial para a vida, sendo incolor insípida e inodora.</p>
                         <p> O planeta possui vastos recursos hídricos, mas apenas uma pequena fração é água doce acessível, tornando a conservação e o uso consciente cruciais para a sustentabilidadee e a saúde do planeta, que inclui o combate ao desperdício e a poluição.</p>
@@ -215,10 +215,10 @@
                     <!-- about-img -->
                     <div class="about-img ">
                         <div class="about-font-img d-none d-lg-block">
-                            <img src="assets/img/gallery/about2.png" alt="">
+                            <img src="assets/img/gallery/about2.jpg" alt="" style="max-width: 500px; width: 85%; height: auto;">
                         </div>
                         <div class="about-back-img ">
-                            <img src="assets/img/gallery/about1.png" alt="">
+                            <img src="assets/img/gallery/about1.jpg" alt="" style="max-width: 500px; width: 100%; height: auto;">
                         </div>
                     </div>
                 </div>
@@ -229,7 +229,7 @@
     <!-- Want To work -->
     <section class="wantToWork-area ">
         <div class="container">
-            <div class="wants-wrapper w-padding2  section-bg" data-background="assets/img/gallery/section_bg01.png">
+            <div class="wants-wrapper w-padding2  section-bg" data-background="assets/img/gallery/section_bg01.jpg">
                 <div class="row align-items-center justify-content-between">
                     <div class="col-xl-5 col-lg-9 col-md-8">
                         <div class="wantToWork-caption wantToWork-caption2">
@@ -387,7 +387,7 @@
     <!-- Testimonial End -->
 
     <!--? Count Down Start -->
-    <div class="count-down-area pt-25 section-bg" data-background="assets/img/gallery/section_bg02.png">
+    <div class="count-down-area pt-25 section-bg" data-background="assets/img/gallery/section_bg02.jpg">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-12 col-md-12">
