--- a/events.html
+++ b/events.html
@@ -192,7 +192,7 @@
     </div>
     <!-- Count Down End -->
     <!-- Featured_job_start -->
-    <section class="featured-job-area section-padding30 section-bg2" data-background="assets/img/gallery/section_bg03.png">
+    <section class="featured-job-area section-padding30 section-bg2" data-background="assets/img/gallery/section_bg03.pnj">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-xl-7 col-lg-9 col-md-10 col-sm-12">
