Adição de uma imagem, alteração de textos e mudança de cor de botões

--- a/about.html
+++ b/about.html
@@ -113,7 +113,7 @@
                                     </div>
                                     <!-- Header-btn -->
                                     <div class="header-right-btn d-none d-lg-block ml-20">
-                                        <a href="contact.html" class="btn header-btn">Doe para a nossa causa</a>
+                                        <a href="contact.html" class="btn header-btn" style="background-color:#1ed2ff;">Doe para a nossa causa</a>
                                     </div>
                                 </div>
                             </div> 
@@ -152,8 +152,8 @@
                 <div class="col-xl-6 col-lg-7 col-md-10 col-sm-10">
                     <!-- Section Tittle -->
                     <div class="section-tittle text-center mb-80">
-                        <span>O que estamos fazendo</span>
-                        <h2>Nós estamos em uma missão para proporcionar um fim aos desastres hídricos.</h2>
+                        <span>O que estamos fazendo?</span>
+                        <h2>Um site com o objetivo de conscientizar a sociedade sobre a água do nosso planeta.</h2>
                     </div>
                 </div>
             </div>
@@ -237,7 +237,7 @@
                         </div>
                     </div>
                     <div class="col-xl-2 col-lg-3 col-md-4">
-                        <a href="#" class="btn white-btn f-right sm-left">Torne-se um voluntário</a>
+                        <a href="#" class="btn white-btn f-right sm-left" style="background-color:#1ed2ff;">Torne-se um voluntário</a>
                     </div>
                 </div>
             </div>
