--- a/blog.html
+++ b/blog.html
@@ -158,11 +158,12 @@
                                 </div>
                                 <div class="blog_details">
                                     <a class="d-inline-block" href="blog_details.html">
-                                        <h2 class="blog-head" style="color: #2d2d2d;">Água e a sua importancia</h2>
+                                        <h2 class="blog-head" style="color: #2d2d2d;">Água e a sua Importância</h2>
                                     </a>
                                     <p>A Água é um recurso essencial para diversos setores da sociedade brasileira e do mundo inteiro, sendo utilizada principalmente para a irrigação de lavouras,
                                         o abastecimento humano (urbano e rural), as atividades industriais, 
-                                        a geração de energia elétrica, a extração mineral, a aquicultura, a navegação, o turismo e o lazer.</p>
+                                        a geração de energia elétrica, a extração mineral, a aquicultura, a navegação, o turismo, o lazer e outras atividades como: Cozinhar, lavar a louça, 
+                                        irrigação de plantas, e otras atividades.</p>
                                     <ul class="blog-info-link">
                                         <li><a href="#"><i class="fa fa-user"></i> Travel, Lifestyle</a></li>
                                         <li><a href="#"><i class="fa fa-comments"></i> 03 Comments</a></li>
@@ -181,7 +182,7 @@
                                     <a class="d-inline-block" href="blog_details.html">
                                         <h2 class="blog-head" style="color: #2d2d2d;">Água e sua responsabilidade em outros Setores</h2>
                                     </a>
-                                    <p> água é um recurso natural essencial para a manutenção da natureza, responsável por manter a umidade do ar, abastecer 
+                                    <p> A Água também possui resultados em outros setores. por exemplo: Ela também responsável por manter a umidade do ar, abastecer 
                                         lençóis freáticos e conservar a vida de plantas por todo o mundo, 
                                         também desempenha importante função na atividade da agricultura, nas indústrias, na geração de energia elétrica e outros fatores.</p>
                                     <ul class="blog-info-link">
@@ -203,8 +204,8 @@
                                         <h2 class="blog-head" style="color: #2d2d2d;"> Preservação da Água </h2>
                                     </a>
                                     <p> A água que tanto bebemos e utilizamos, se não for preservada, causará impactos no nosso 
-                                        ammbiente de forma severa, afetando a flora e a fauna, fome, doenças, escassez e redução de lençóis freáticos, a contaminação da água, e 
-                                        aumentam conflitos pelo seu acesso, além de prejudicar a saúde humana com o consumo de água, contaminando e transmitindo graves doenças para aquela população.</p>
+                                        ammbiente de forma severa, afetando a flora e a fauna, fome, causando escassez e redução de lençóis freáticos, contaminação da água, e 
+                                        aumentando conflitos pelo seu acesso, além de prejudicar a saúde humana com o consumo de água imprópria, contaminando e transmitindo graves doenças para aquela e outras populações.</p>
                                     <ul class="blog-info-link">
                                         <li><a href="#"><i class="fa fa-user"></i> Travel, Lifestyle</a></li>
                                         <li><a href="#"><i class="fa fa-comments"></i> 03 Comments</a></li>
