--- a/blog.html
+++ b/blog.html
@@ -163,7 +163,7 @@
                                     <p>A Água é um recurso essencial para diversos setores da sociedade brasileira e do mundo inteiro, sendo utilizada principalmente para a irrigação de lavouras,
                                         o abastecimento humano (urbano e rural), as atividades industriais, 
                                         a geração de energia elétrica, a extração mineral, a aquicultura, a navegação, o turismo, o lazer e outras atividades como: Cozinhar, lavar a louça, 
-                                        irrigação de plantas, e otras atividades.</p>
+                                        irrigação de plantas, e otras atividades, mostrando ter um papel importante para a vida humana e gerações futuras<./p>
                                     <ul class="blog-info-link">
                                         <li><a href="#"><i class="fa fa-user"></i> Travel, Lifestyle</a></li>
                                         <li><a href="#"><i class="fa fa-comments"></i> 03 Comments</a></li>
@@ -182,7 +182,7 @@
                                     <a class="d-inline-block" href="blog_details.html">
                                         <h2 class="blog-head" style="color: #2d2d2d;">Água e sua responsabilidade em outros Setores</h2>
                                     </a>
-                                    <p> A Água também possui resultados em outros setores. por exemplo: Ela também responsável por manter a umidade do ar, abastecer 
+                                    <p> A Água também possui papéis em outros setores. por exemplo: Ela também responsável por manter a umidade do ar, abastecer 
                                         lençóis freáticos e conservar a vida de plantas por todo o mundo, 
                                         também desempenha importante função na atividade da agricultura, nas indústrias, na geração de energia elétrica e outros fatores.</p>
                                     <ul class="blog-info-link">
@@ -201,7 +201,7 @@
                                 </div>
                                 <div class="blog_details">
                                     <a class="d-inline-block" href="blog_details.html">
-                                        <h2 class="blog-head" style="color: #2d2d2d;"> Preservação da Água </h2>
+                                        <h2 class="blog-head" style="color: #2d2d2d;">A Preservação da Água </h2>
                                     </a>
                                     <p> A água que tanto bebemos e utilizamos, se não for preservada, causará impactos no nosso 
                                         ammbiente de forma severa, afetando a flora e a fauna, fome, causando escassez e redução de lençóis freáticos, contaminação da água, e 
