--- a/blog.html
+++ b/blog.html
@@ -163,7 +163,7 @@
                                     <p>A Água é um recurso essencial para diversos setores da sociedade brasileira e do mundo inteiro, sendo utilizada principalmente para a irrigação de lavouras,
                                         o abastecimento humano (urbano e rural), as atividades industriais, 
                                         a geração de energia elétrica, a extração mineral, a aquicultura, a navegação, o turismo, o lazer e outras atividades como: Cozinhar, lavar a louça, 
-                                        irrigação de plantas, e otras atividades, mostrando ter um papel importante para a vida humana e gerações futuras<./p>
+                                        irrigação de plantas, e otras atividades, mostrando ter um papel importante para a vida humana e gerações futuras. </p>
                                     <ul class="blog-info-link">
                                         <li><a href="#"><i class="fa fa-user"></i> Travel, Lifestyle</a></li>
                                         <li><a href="#"><i class="fa fa-comments"></i> 03 Comments</a></li>
