--- a/blog.html
+++ b/blog.html
@@ -180,7 +180,7 @@
                                 </div>
                                 <div class="blog_details">
                                     <a class="d-inline-block" href="blog_details.html">
-                                        <h2 class="blog-head" style="color: #2d2d2d;">Água e sua responsabilidade em outros Setores</h2>
+                                        <h2 class="blog-head" style="color: #2d2d2d;">Água e seu papel em outros Setores</h2>
                                     </a>
                                     <p> A Água também possui papéis em outros setores. por exemplo: Ela também responsável por manter a umidade do ar, abastecer 
                                         lençóis freáticos e conservar a vida de plantas por todo o mundo, 
