Alteração de algumas cores e adição de informações de contato na página sobre nós

--- a/about.html
+++ b/about.html
@@ -153,7 +153,7 @@
                     <!-- Section Tittle -->
                     <div class="section-tittle text-center mb-80">
                         <span>O que estamos fazendo?</span>
-                        <h2>Um site com o objetivo de conscientizar a sociedade sobre a água do nosso planeta.</h2>
+                        <h2>Um blog com o objetivo de conscientizar a sociedade sobre a água e os problemas hídricos do nosso planeta.</h2>
                     </div>
                 </div>
             </div>
@@ -204,12 +204,12 @@
                         <!-- Section Tittle -->
                         <div class="section-tittle mb-35">
                             <span>Sobre nosso site</span>
-                            <h2>Projeto desenvolvido por alunos do Instituto Federal do Ceará. este site tem como tema central a água e busca conscientizar a sociedade sobre a importância do seu uso sustentável.</h2>
+                            <h2>Projeto desenvolvido por alunos do Instituto Federal do Ceará. este blog tem como tema central a água e busca conscientizar a sociedade sobre a importância do seu uso sustentável.</h2>
                         </div>
                         <p> A água é um recurso natural, vital e fundamental, composta por H2O, essencial para a vida, sendo incolor insípida e inodora.</p>
                         <p> O planeta possui vastos recursos hídricos, mas apenas uma pequena fração é água doce acessível, tornando a conservação e o uso consciente cruciais para a sustentabilidadee e a saúde do planeta, que inclui o combate ao desperdício e a poluição.</p>
                     </div>
-                    <a href="about.html" class="btn">Sobre nós</a>
+                    <a href="about.html" class="btn" style="background-color:#1ed2ff;">Sobre nós</a>
                 </div>
                 <div class="col-lg-6 col-md-12">
                     <!-- about-img -->
@@ -453,13 +453,13 @@
                         <div class="col-xl-3 col-lg-3 col-md-4 col-sm-5">
                             <div class="single-footer-caption mb-50">
                                 <div class="footer-tittle">
-                                    <h4>Contact Info</h4>
+                                    <h4>Informações de Contato</h4>
                                     <ul>
                                         <li>
-                                            <p>Address :Your address goes here, your demo address.</p>
+                                            <p>Endereço: Aracati-CE</p>
                                         </li>
-                                        <li><a href="#">Phone : +8880 44338899</a></li>
-                                        <li><a href="#">Email : info@colorlib.com</a></li>
+                                        <li><a href="#">Número de Telefone: (88) 3303-1200</a></li>
+                                        <li><a href="#">Email: recepcao.aracati@ifce.edu.br</a></li>
                                     </ul>
                                 </div>
 
@@ -468,13 +468,13 @@
                         <div class="col-xl-3 col-lg-3 col-md-4 col-sm-5">
                             <div class="single-footer-caption mb-50">
                                 <div class="footer-tittle">
-                                    <h4>Important Link</h4>
+                                    <h4>Links Importantes</h4>
                                     <ul>
-                                        <li><a href="#"> View Project</a></li>
-                                        <li><a href="#">Contact Us</a></li>
-                                        <li><a href="#">Testimonial</a></li>
-                                        <li><a href="#">Proparties</a></li>
-                                        <li><a href="#">Support</a></li>
+                                        <li><a href="#"> Visualize o projeto</a></li>
+                                        <li><a href="#">Contate-nos</a></li>
+                                        <li><a href="#">Desenvolvedores</a></li>
+                                        <li><a href="#">Propriedades</a></li>
+                                        <li><a href="#">Suporte Técnico</a></li>
                                     </ul>
                                 </div>
                             </div>
