--- a/contact.html
+++ b/contact.html
@@ -103,7 +103,7 @@
                                                         <li><a href="elements.html">Elementos</a></li>
                                                     </ul>
                                                 </li>
-                                                <li><a href="contact.html">Contate-nos</a></li>
+                                                <li><a href="contact.html">Contate-nos.</a></li>
                                             </ul>
                                         </nav>
                                     </div>
@@ -244,7 +244,7 @@
                             <div class="single-footer-caption mb-50">
                                 <div class="footer-tittle">
                                     <h4>Informações para contato.</h4>
-                                    <h4>Informações para contato.</h4>
+                                  
                                     <ul>
                                         <li>
                                             <p>Endereço:  Conj. Hab. Dr. Abelardo Filho, Aracati - CE, 62800-000. Instituto Federal de Educação, Ciência e Tecnologia do Ceará - Campus Aracati</p>
