--- a/events.html
+++ b/events.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title> Charity | Teamplate</title>
+    <title> Água | Eventos Sociais </title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="site.webmanifest">
@@ -48,8 +48,8 @@
                             <div class="row d-flex justify-content-between align-items-center">
                                 <div class="header-info-left d-flex">
                                     <ul>     
-                                        <li>Phone: +99 (0) 101 0000 888</li>
-                                        <li>Email: noreply@yourdomain.com</li>
+                                        <li>Telefone: (88) 3303-12008</li>
+                                        <li>Email: recepcao.aracati@ifce.edu.br</li>
                                     </ul>
                                     <div class="header-social">    
                                         <ul>
@@ -137,7 +137,7 @@
                 <div class="row">
                     <div class="col-xl-12">
                         <div class="hero-cap hero-cap2 pt-20 text-center">
-                            <h2>social events </h2>
+                            <h2> Eventos Sociais </h2>
                         </div>
                     </div>
                 </div>
@@ -198,8 +198,8 @@
                 <div class="col-xl-7 col-lg-9 col-md-10 col-sm-12">
                     <!-- Section Tittle -->
                     <div class="section-tittle text-center mb-80">
-                        <span>What we are boing</span>
-                        <h2>We arrange many social events for charity donations</h2>
+                        <span>Junte-se à essa causa!</span>
+                        <h2>Alguns eventos sobre a conscientização da água</h2>
                     </div>
                 </div>
             </div>
@@ -212,7 +212,7 @@
                                 <a href="#"><img src="assets/img/gallery/socialEvents1.png" alt=""></a>
                             </div>
                             <div class="job-tittle">
-                                <a href="#"><h4>Donation is Hope</h4></a>
+                                <a href="#"><h4>Water.org: Uma instituição de caridade</h4></a> 
                                 <ul>
                                     <li><i class="far fa-clock"></i>8:30 - 9:30am</li>
                                     <li><i class="fas fa-sort-amount-down"></i>18.01.2021</li>
@@ -230,11 +230,10 @@
                                 <a href="#"><img src="assets/img/gallery/socialEvents2.png" alt=""></a>
                             </div>
                             <div class="job-tittle">
-                                <a href="#"><h4>A hand for Children</h4></a>
+                                <a href="#"><h4>Instituto Brotar - ONG Ceará</h4></a>
                                 <ul>
-                                    <li><i class="far fa-clock"></i>8:30 - 9:30am</li>
-                                    <li><i class="fas fa-sort-amount-down"></i>18.01.2021</li>
-                                    <li><i class="fas fa-map-marker-alt"></i>Athens, Greece</li>
+                                    <li>contato@institutobrotar@org.br</li>
+                                    <li><i class="fas fa-map-marker-alt"></i>Tabuleiro do Norte - CE</li>
                                 </ul>
                             </div>
                         </div>
@@ -248,11 +247,10 @@
                                 <a href="#"><img src="assets/img/gallery/socialEvents3.png" alt=""></a>
                             </div>
                             <div class="job-tittle">
-                                <a href="#"><h4>Help for Children</h4></a>
+                                <a href="#"><h4>Água e Saneamento | Projeto Saúde & Alegria </h4></a>
                                 <ul>
-                                    <li><i class="far fa-clock"></i>8:30 - 9:30am</li>
-                                    <li><i class="fas fa-sort-amount-down"></i>18.01.2021</li>
-                                    <li><i class="fas fa-map-marker-alt"></i>Athens, Greece</li>
+                                   <li>psa@saudeealegria.org.br</li>
+                                    <li><i class="fas fa-map-marker-alt"></i>Santarém - PA</li>
                                 </ul>
                             </div>
                         </div>
@@ -266,11 +264,10 @@
                                 <a href="#"><img src="assets/img/gallery/socialEvents1.png" alt=""></a>
                             </div>
                             <div class="job-tittle">
-                                <a href="#"><h4>Donation is Hope</h4></a>
+                                <a href="#"><h4>ONG Caminho das Águas</h4></a>
                                 <ul>
-                                    <li><i class="far fa-clock"></i>8:30 - 9:30am</li>
-                                    <li><i class="fas fa-sort-amount-down"></i>18.01.2021</li>
-                                    <li><i class="fas fa-map-marker-alt"></i>Athens, Greece</li>
+                                    <li></li>
+                                    <li><i class="fas fa-map-marker-alt"></i>A8</li>
                                 </ul>
                             </div>
                         </div>
@@ -284,11 +281,10 @@
                                 <a href="#"><img src="assets/img/gallery/socialEvents2.png" alt=""></a>
                             </div>
                             <div class="job-tittle">
-                                <a href="#"><h4>A hand for Children</h4></a>
+                                <a href="#"><h4>Projeto Cílios do Jaguaribe</h4></a>
                                 <ul>
-                                    <li><i class="far fa-clock"></i>8:30 - 9:30am</li>
-                                    <li><i class="fas fa-sort-amount-down"></i>18.01.2021</li>
-                                    <li><i class="fas fa-map-marker-alt"></i>Athens, Greece</li>
+                                    <li> cearamaisverde@sema.ce.gov.br</li>
+                                    <li><i class="fas fa-map-marker-alt"></i>Fortaleza - CE</li>
                                 </ul>
                             </div>
                         </div>
@@ -302,7 +298,7 @@
                                 <a href="#"><img src="assets/img/gallery/socialEvents3.png" alt=""></a>
                             </div>
                             <div class="job-tittle">
-                                <a href="#"><h4>Help for Children</h4></a>
+                                <a href="#"><h4>Movimento Água - Pacto Global</h4></a>
                                 <ul>
                                     <li><i class="far fa-clock"></i>8:30 - 9:30am</li>
                                     <li><i class="fas fa-sort-amount-down"></i>18.01.2021</li>
