--- a/blog.html
+++ b/blog.html
@@ -180,11 +180,12 @@
                                 </div>
                                 <div class="blog_details">
                                     <a class="d-inline-block" href="blog_details.html">
-                                        <h2 class="blog-head" style="color: #2d2d2d;">Água e seu papel em outros Setores</h2>
+                                        <h2 class="blog-head" style="color: #2d2d2d;"> Crise Global da Água </h2>
                                     </a>
-                                    <p> A Água também possui papéis em outros setores. por exemplo: Ela também responsável por manter a umidade do ar, abastecer 
-                                        lençóis freáticos e conservar a vida de plantas por todo o mundo, 
-                                        também desempenha importante função na atividade da agricultura, nas indústrias, na geração de energia elétrica e outros fatores.</p>
+                                    <p> A crise global da água é a escassez e má distribuição da água potável no mundo, 
+                                        agravada pela poluição, desperdício e mudanças climáticas. Milhões de pessoas vivem sem acesso à água limpa, 
+                                        o que causa doenças e impacta a produção de alimentos. O crescimento populacional e a má gestão intensificam o problema. 
+                                        Soluções incluem uso consciente, tratamento da água, preservação ambiental e investimento em infraestrutura.</p>
                                     <ul class="blog-info-link">
                                         <li><a href="#"><i class="fa fa-user"></i> Travel, Lifestyle</a></li>
                                         <li><a href="#"><i class="fa fa-comments"></i> 03 Comments</a></li>
@@ -201,11 +202,12 @@
                                 </div>
                                 <div class="blog_details">
                                     <a class="d-inline-block" href="blog_details.html">
-                                        <h2 class="blog-head" style="color: #2d2d2d;">A Preservação da Água </h2>
+                                        <h2 class="blog-head" style="color: #2d2d2d;"> Gestão das Águas e esgoto </h2>
                                     </a>
-                                    <p> A água que tanto bebemos e utilizamos, se não for preservada, causará impactos no nosso 
-                                        ammbiente de forma severa, afetando a flora e a fauna, fome, causando escassez e redução de lençóis freáticos, contaminação da água, e 
-                                        aumentando conflitos pelo seu acesso, além de prejudicar a saúde humana com o consumo de água imprópria, contaminando e transmitindo graves doenças para aquela e outras populações.</p>
+                                    <p> A **CAGECE** (Companhia de Água e Esgoto do Ceará) é a empresa responsável pela **gestão dos serviços de abastecimento de água e tratamento de esgoto no estado do Ceará. 
+                                        Ela atua captando, tratando e distribuindo água potável, além de coletar e tratar o esgoto para garantir a 
+                                        saúde pública e a preservação do meio ambiente. A empresa também desenvolve projetos de educação ambiental, combate ao desperdício e 
+                                        ampliação do acesso ao saneamento básico em áreas urbanas e rurais. Seu objetivo é oferecer serviços de qualidade com sustentabilidade e eficiência.</p>
                                     <ul class="blog-info-link">
                                         <li><a href="#"><i class="fa fa-user"></i> Travel, Lifestyle</a></li>
                                         <li><a href="#"><i class="fa fa-comments"></i> 03 Comments</a></li>
