--- a/blog.html
+++ b/blog.html
@@ -150,7 +150,7 @@
                         <div class="blog_left_sidebar">
                             <article class="blog_item">
                                 <div class="blog_item_img">
-                                    <img class="card-img rounded-0" src="assets/img/blog/single_blog_1.png" alt="">
+                                    <img class="card-img rounded-0" src="Agua.jpg" alt="">
                                     <a href="#" class="blog_item_date">
                                         <h3>15</h3>
                                         <p>Jan</p>
@@ -474,13 +474,13 @@
                         <div class="col-xl-3 col-lg-3 col-md-4 col-sm-5">
                             <div class="single-footer-caption mb-50">
                                 <div class="footer-tittle">
-                                    <h4>Contact Info</h4>
+                                    <h4>Informações para contato</h4>
                                     <ul>
                                         <li>
-                                            <p>Address :Your address goes here, your demo address.</p>
+                                            <p>Endereço: CE-040, Km 137 - 1 s/n Aeroporto - Conj. Hab. Dr. Abelardo Filho, Aracati - CE, 62800-000</p>
                                         </li>
-                                        <li><a href="#">Phone : +8880 44338899</a></li>
-                                        <li><a href="#">Email : info@colorlib.com</a></li>
+                                        <li><a href="#">Telefone: (88) 3303-1200</a></li>
+                                        <li><a href="#">Email: recepcao.aracati@ifce.edu.br</a></li>
                                     </ul>
                                 </div>
 
@@ -489,7 +489,7 @@
                         <div class="col-xl-3 col-lg-3 col-md-4 col-sm-5">
                             <div class="single-footer-caption mb-50">
                                 <div class="footer-tittle">
-                                    <h4>Important Link</h4>
+                                    <h4>Links Importantes</h4>
                                     <ul>
                                         <li><a href="#"> View Project</a></li>
                                         <li><a href="#">Contact Us</a></li>
